--- a/serverless.yml
+++ b/serverless.yml
@@ -7,9 +7,11 @@ provider:
   name: aws
   runtime: nodejs6.10
   timeout: 30
-  region: us-west-2
+  region: us-west-1
+  # region: us-west-2
 #  memorySize: 3008
 
+  # stage: prod
   stage: dev
 #  stage: prodGreen
 #  stage: prodBlue
